--- a/src/main/java/RemoveUser.form
+++ b/src/main/java/RemoveUser.form
@@ -43,7 +43,9 @@
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-10217709"/>
           <font name="Roboto Light" size="16" style="1"/>
+          <foreground color="-1839361"/>
           <text value="Remover"/>
         </properties>
       </component>
