--- a/src/main/java/SearchUser.form
+++ b/src/main/java/SearchUser.form
@@ -31,6 +31,8 @@
           <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-16757240"/>
+          <foreground color="-1839361"/>
           <text value="Procurar um usuário"/>
         </properties>
       </component>
