--- a/src/main/java/UpdateUser.form
+++ b/src/main/java/UpdateUser.form
@@ -102,7 +102,9 @@
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-16757240"/>
           <font name="Roboto Light" size="16" style="1"/>
+          <foreground color="-1839361"/>
           <text value="Alterar Usuário"/>
         </properties>
       </component>
